show donors on public pages & add collaboration a new module
